initial import of test_plot_usersym.pro (visual test)

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -165,6 +165,7 @@ TESTS = \
   test_parse_url.pro \
   test_plot_oo.pro \
   test_plot_ranges.pro \
+  test_plot_usersym.pro \
   test_plotting_ranges.pro \
   test_pmulti.pro \
   test_pmulti_basic.pro \
