--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,11 +5,11 @@ branches:
 clone_folder: c:\projects\gdl
 configuration:
   - Release
-  - Debug
+  #- Debug
 environment:
   matrix:
   - platform: mingw64630i686
-  #- platform: mingw64630x8664
+  - platform: mingw64630x8664
    
 matrix:
   fast_finish: true
