--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,7 +9,7 @@ configuration:
 environment:
   matrix:
   #- platform: mingw64720x8664
-  #- platform: mingw64630x8664
+  - platform: mingw64630x8664
   - platform: mingw64630i686
   #- platform: mingw64730x8664
   #- platform: mingw64630x8664
@@ -234,8 +234,8 @@ before_build:
 
 build_script:
   - C:\msys64\usr\bin\bash.exe -lc "cd /c/projects/gdl &&.  ./scripts/win32/bld_gm32.msys"
-  - C:\msys64\usr\bin\bash.exe -lc "cd /c/projects/gdl &&. ./scripts/appveyor_gdl.msys"
-  #- cmd /K scripts\mingw-bldgdl
+  #- C:\msys64\usr\bin\bash.exe -lc "cd /c/projects/gdl &&. ./scripts/appveyor_gdl.msys"
+  - cmd /K scripts\mingw-bldgdl
 
 on_failure:
   - ps: cat c:\projects\gdl\build\testsuite\Testing\Temporary\LastTest.log
