--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,7 +9,7 @@ configuration:
 environment:
   matrix:
   #- platform: mingw64720x8664
-  - platform: mingw64630x8664
+  #- platform: mingw64630x8664
   - platform: mingw64630i686
   #- platform: mingw64730x8664
   #- platform: mingw64630x8664
@@ -79,11 +79,21 @@ install:
         appveyor DownloadFile http://downloads.sourceforge.net/project/graphicsmagick/graphicsmagick/1.3.30/GraphicsMagick-1.3.30.tar.xz
         cd c:/projects/gdl
         c:/msys64/usr/bin/bash.exe -lc 'cd $OLDPWD &&. ./scripts/appveyor_plplot.msys'
-        # the above script attempts to make a viable plplot using msys.
-        # it also populates the mingw/wxwidgets directory with MSYS-compatible and also
+        # WxWidgets (old school inclusion)
+        cd c:\projects\gdl\win32libs
+        appveyor DownloadFile https://github.com/wxWidgets/wxWidgets/releases/download/v3.0.4/wxWidgets-3.0.4.7z
+        7z x wxWidgets-3.0.4.7z -y -o"wxWidgets-3.0.4"
+        cd c:\projects\gdl\win32libs\wxWidgets-3.0.4\build\msw
+        mingw32-make SHELL=cmd -f makefile.gcc setup_h BUILD=release SHARED=1 USE_GUI=1 USE_XRC=0 USE_HTML=0 USE_WEBVIEW=0 USE_MEDIA=0 USE_AUI=0 USE_RIBBON=0 USE_PROPGRID=0 USE_RICHTEXT=0 USE_STC=0 USE_OPENGL=0 VENDOR=gdl DEBUG_FLAG=1
+        mingw32-make SHELL=cmd -f makefile.gcc -j4 BUILD=release SHARED=1 USE_GUI=1 USE_XRC=0 USE_HTML=0 USE_WEBVIEW=0 USE_MEDIA=0 USE_AUI=0 USE_RIBBON=0 USE_PROPGRID=0 USE_RICHTEXT=0 USE_STC=0 USE_OPENGL=0 VENDOR=gdl DEBUG_FLAG=1
+        # Below 2 lines are required for wxWidgets-3.0.4, don't know why
+        copy c:\projects\gdl\win32libs\wxWidgets-3.0.4\build\msw\gcc_mswudll\coredll_headerctrlg.o c:\projects\gdl\win32libs\wxWidgets-3.0.4\build\msw\gcc_mswudll\coredll_headerctrlgo
+        mingw32-make SHELL=cmd -f makefile.gcc -j4 BUILD=release SHARED=1 USE_GUI=1 USE_XRC=0 USE_HTML=0 USE_WEBVIEW=0 USE_MEDIA=0 USE_AUI=0 USE_RIBBON=0 USE_PROPGRID=0 USE_RICHTEXT=0 USE_STC=0 USE_OPENGL=0 VENDOR=gdl DEBUG_FLAG=1
+        $env:WXWIDGETS_ROOT="c:\projects\gdl\win32libs\wxWidgets-3.0.4"
+        # End WxWidgets (old school inclusion)
         #$env:wxWidgets_ROOT="c:\projects\gdl\win32libs\$env:WXNAME"
         $env:PLPLOTDIR="C:\projects\gdl\mingw\plplot-5.13"
-        #           mkdir $env:wxWidgets_ROOT
+        mkdir $env:wxWidgets_ROOT
         # $env:wxWidgets_ROOT is an attempt to make a WIN32-compatible wxwidget.
         #  It doesn't work.
 
@@ -259,7 +269,7 @@ after_build:
   # Get plplot info placed:
 
   - cd c:\projects\gdl
-  - 7z a gdl_build.zip install build
+  - 7z a gdl_build.zip install build win32libs mingw
   # - ctest -C Release --output-on-failure
   # python needs to be python built in mingw, not the python for windows.
   # - python -c "import gdl; dir(gdl)"
