--- a/appveyor.yml
+++ b/appveyor.yml
@@ -59,22 +59,15 @@ install:
           https://github.com/wxWidgets/wxWidgets/releases/download/v3.0.4/wxWidgets-3.0.4.7z
         7z x wxWidgets-3.0.4.7z -y -o"wxWidgets-3.0.4"
         cd c:\projects\gdl\win32libs\wxWidgets-3.0.4\build\msw
-        mingw32-make SHELL=cmd -f makefile.gcc setup_h `
-          BUILD=release SHARED=1 USE_GUI=1 USE_XRC=0 USE_HTML=0 `
-          USE_WEBVIEW=0 USE_MEDIA=0 USE_AUI=0 USE_RIBBON=0 USE_PROPGRID=0 `
-          USE_RICHTEXT=0 USE_STC=0 USE_OPENGL=0 VENDOR=gdl DEBUG_FLAG=1 `
-          > $env:BLDDIR/makewx.out
-        mingw32-make SHELL=cmd -f makefile.gcc -j4 `
-          BUILD=release SHARED=1 USE_GUI=1 USE_XRC=0 USE_HTML=0 `
-          USE_WEBVIEW=0 USE_MEDIA=0 USE_AUI=0 USE_RIBBON=0 USE_PROPGRID=0 `
-          USE_RICHTEXT=0 USE_STC=0 USE_OPENGL=0 VENDOR=gdl DEBUG_FLAG=1 `
-          >> $env:BLDDIR/makewx.out
+        mingw32-make SHELL=cmd -f makefile.gcc setup_h BUILD=release SHARED=1 USE_GUI=1 USE_XRC=0 USE_HTML=0 USE_WEBVIEW=0 USE_MEDIA=0 USE_AUI=0 USE_RIBBON=0 USE_PROPGRID=0 USE_RICHTEXT=0 USE_STC=0 USE_OPENGL=0 VENDOR=gdl DEBUG_FLAG=1 > $env:BLDDIR/makewx.out
+        echo "$env:WX_TOP mingw32-make (1) finished" >>  $env:BLDDIR/makewx.out
+        echo "$env:WX_TOP mingw32-make (1) finished" 
+        mingw32-make SHELL=cmd -f makefile.gcc -j4 BUILD=release SHARED=1 USE_GUI=1 USE_XRC=0 USE_HTML=0 USE_WEBVIEW=0 USE_MEDIA=0 USE_AUI=0 USE_RIBBON=0 USE_PROPGRID=0 USE_RICHTEXT=0 USE_STC=0 USE_OPENGL=0 VENDOR=gdl DEBUG_FLAG=1 >> $env:BLDDIR/makewx.out
+        echo "$env:WX_TOP mingw32-make (2) finished" >>  $env:BLDDIR/makewx.out
+        echo "$env:WX_TOP mingw32-make (2) finished" 
         # Below 2 lines are required for wxWidgets-3.0.4, don't know why
         copy c:\projects\gdl\win32libs\wxWidgets-3.0.4\build\msw\gcc_mswudll\coredll_headerctrlg.o c:\projects\gdl\win32libs\wxWidgets-3.0.4\build\msw\gcc_mswudll\coredll_headerctrlgo
-        mingw32-make SHELL=cmd -f makefile.gcc -j4 `
-          BUILD=release SHARED=1 USE_GUI=1 USE_XRC=0 USE_HTML=0 `
-          USE_WEBVIEW=0 USE_MEDIA=0 USE_AUI=0 USE_RIBBON=0 USE_PROPGRID=0 `
-          USE_RICHTEXT=0 USE_STC=0 USE_OPENGL=0 VENDOR=gdl DEBUG_FLAG=1
+        mingw32-make SHELL=cmd -f makefile.gcc -j4 BUILD=release SHARED=1 USE_GUI=1 USE_XRC=0 USE_HTML=0 USE_WEBVIEW=0 USE_MEDIA=0 USE_AUI=0 USE_RIBBON=0 USE_PROPGRID=0 USE_RICHTEXT=0 USE_STC=0 USE_OPENGL=0 VENDOR=gdl DEBUG_FLAG=1
           
         $env:WX_TOP="c:\projects\gdl\win32libs\wxWidgets-3.0.4"
         
@@ -88,10 +81,7 @@ install:
         sed -i 's/%hh/%/g' src\test\test_data.c
         md mingw
         md mingw\lib
-        mingw32-make -f Makefile -j4 `
-          PLATFORM=mingw STAMP=clean TEST_PROGS="" `
-          top_srcdir="c:\projects\gdl\win32libs\bsd-xdr-1.0.0" recursive-all `
-          >  $env:BLDDIR/makexdr.out
+        mingw32-make -f Makefile -j4 PLATFORM=mingw STAMP=clean TEST_PROGS="" top_srcdir="c:\projects\gdl\win32libs\bsd-xdr-1.0.0" recursive-all >  $env:BLDDIR/makexdr.out
         mv mingw\libxdr.dll.a c:\projects\gdl\win32libs\lib
         mv rpc c:\projects\gdl\win32libs\include
         mv mingw\mgwxdr-0.dll c:\projects\gdl\win32libs\bin
@@ -120,7 +110,7 @@ install:
           -DDEFAULT_NO_CAIRO_DEVICES=ON -DDEFAULT_NO_QT_DEVICES=ON -DDEFAULT_NO_BINDINGS=ON `
           -DENABLE_cxx=ON -DOLD_WXWIDGETS=ON  -DENABLE_wxwidgets:BOOL=ON `
           -DWITH_FREETYPE=OFF -DPLD_wxwidgets=ON -DPLD_pdf=OFF -DPLD_psttf=OFF -DPLD_wingdi=ON `
-          -DCMAKE_INSTALL_PREFIX=$env:PLPLOTDIR -DOLD_WXWIDGETS=ON `
+          -DCMAKE_INSTALL_PREFIX=C:\projects\gdl\mingw\plplot-5.13 -DOLD_WXWIDGETS=ON `
           -DENABLE_wxwidgets=ON -DwxWidgets_LIB_DIR=$env:WX_TOP\lib\gcc_dll 
         cd plplot-5.13.0/build
         mingw32-make -j4
@@ -135,12 +125,15 @@ install:
         cmake "eigen-eigen-5a0156e40feb" "-Beigen-eigen-5a0156e40feb/build" -G "MinGW Makefiles" "-DCMAKE_BUILD_TYPE=$($env:CONFIGURATION)" -DCMAKE_INSTALL_PREFIX=c:\projects\gdl\win32libs
         cd eigen-eigen-5a0156e40feb/build
         mingw32-make install
+        
         # GSL
         cd c:\projects\gdl\win32libs
-        appveyor DownloadFile `
-          http://ftpmirror.gnu.org/gsl/gsl-2.4.tar.gz
+        appveyor DownloadFile http://ftpmirror.gnu.org/gsl/gsl-2.4.tar.gz
         tar zxf gsl-2.4.tar.gz
-        c:\msys64\usr\bin\bash.exe -lc 'cd /c/projects/gdl/win32libs/gsl-2.4 && . /c/projects/gdl/scripts/appveyor_gsl.msys'
+        echo 'export PATH=$PATH:/c/mingw-w64/$env:GCC/$env:mname/bin && export LDFLAGS=-L/c/mingw-w64/$env:GCC/$env:mname/i686-w64-mingw32/lib && export CPPFLAGS=-I/c/mingw-w64/$env:GCC/$env:mname/i686-w64-mingw32/include && cd /c/projects/gdl/win32libs/gsl-2.4 && ./configure --build=i686-w64-mingw32 --host=i686-w64-mingw32 --prefix /c/projects/gdl/win32libs && make -j4 && make install'
+        c:\msys64\usr\bin\bash.exe -lc 'export PATH=$PATH:/c/mingw-w64/$env:GCC/$env:mname/bin && export LDFLAGS=-L/c/mingw-w64/$env:GCC/$env:mname/i686-w64-mingw32/lib && export CPPFLAGS=-I/c/mingw-w64/$env:GCC/$env:mname/i686-w64-mingw32/include && cd /c/projects/gdl/win32libs/gsl-2.4 && ./configure --build=i686-w64-mingw32 --host=i686-w64-mingw32 --prefix /c/projects/gdl/win32libs && make -j4 && make install'
+        # c:\msys64\usr\bin\bash.exe -lc 'cd /c/projects/gdl/win32libs/gsl-2.4 && . /c/projects/gdl/scripts/appveyor_gsl.msys'
+ 
         # GNUWin32 (GNU Readline, Zlib, libPNG, PCRE, libtiff)
         # TODO: Find appropriate libtiff with TIFFField, TIFFFieldWithTag and TIFFFieldName (and libgeotiff?)
         #       (Remember to remove -DTIFF=OFF -DGEOTIFF=OFF from build_script when done)
