--- a/appveyor.yml
+++ b/appveyor.yml
@@ -59,6 +59,8 @@ install:
           https://github.com/wxWidgets/wxWidgets/releases/download/v3.0.4/wxWidgets-3.0.4.7z
         7z x wxWidgets-3.0.4.7z -y -o"wxWidgets-3.0.4"
         cd c:\projects\gdl\win32libs\wxWidgets-3.0.4\build\msw
+        $env:WXNAME="wxWidgets-3.0.4"
+        $env:WX_TOP="c:\projects\gdl\win32libs\wxWidgets-3.0.4"
         mingw32-make SHELL=cmd -f makefile.gcc setup_h BUILD=release SHARED=1 USE_GUI=1 USE_XRC=0 USE_HTML=0 USE_WEBVIEW=0 USE_MEDIA=0 USE_AUI=0 USE_RIBBON=0 USE_PROPGRID=0 USE_RICHTEXT=0 USE_STC=0 USE_OPENGL=0 VENDOR=gdl DEBUG_FLAG=1 > $env:BLDDIR/makewx.out
         echo "$env:WX_TOP mingw32-make (1) finished" >>  $env:BLDDIR/makewx.out
         echo "$env:WX_TOP mingw32-make (1) finished" 
@@ -68,9 +70,7 @@ install:
         # Below 2 lines are required for wxWidgets-3.0.4, don't know why
         copy c:\projects\gdl\win32libs\wxWidgets-3.0.4\build\msw\gcc_mswudll\coredll_headerctrlg.o c:\projects\gdl\win32libs\wxWidgets-3.0.4\build\msw\gcc_mswudll\coredll_headerctrlgo
         mingw32-make SHELL=cmd -f makefile.gcc -j4 BUILD=release SHARED=1 USE_GUI=1 USE_XRC=0 USE_HTML=0 USE_WEBVIEW=0 USE_MEDIA=0 USE_AUI=0 USE_RIBBON=0 USE_PROPGRID=0 USE_RICHTEXT=0 USE_STC=0 USE_OPENGL=0 VENDOR=gdl DEBUG_FLAG=1
-          
-        $env:WX_TOP="c:\projects\gdl\win32libs\wxWidgets-3.0.4"
-        
+
         # BSD-XDR
         cd c:\projects\gdl\win32libs
         appveyor DownloadFile `
@@ -85,15 +85,20 @@ install:
         mv mingw\libxdr.dll.a c:\projects\gdl\win32libs\lib
         mv rpc c:\projects\gdl\win32libs\include
         mv mingw\mgwxdr-0.dll c:\projects\gdl\win32libs\bin
-        
+        }
+  - ps: |
+      if ($true)
+      {
         # PLplot
         cd c:\projects\gdl\win32libs
         appveyor DownloadFile `
           http://downloads.sourceforge.net/project/plplot/plplot/5.13.0%20Source/plplot-5.13.0.tar.gz
         tar zxf plplot-5.13.0.tar.gz
-        md plplot-5.13.0/build
+        md plplot-5.13.0/build -ErrorAction silentlycontinue
+        cd plplot-5.13.0/build ; rm * -Recurse  -ErrorAction silentlycontinue
+        cd c:\projects\gdl\win32libs
         #
-        C:\msys64\usr\bin\bash.exe -lc "mkdir -p /c/projects/gdl/mingw/plplot-5.13.0"
+        C:\msys64\usr\bin\bash.exe -lc "mkdir -p /c/projects/gdl/mingw/plplot-5.13"
         $env:PLPLOTDIR="C:\projects\gdl\mingw\plplot-5.13"
         # plplot failed to bring in the wxwidgets build because the version is not recognized in the
         # cmake module findwxwidgets.cmake (customized in plplot)
@@ -104,35 +109,30 @@ install:
         #
         c:\msys64\usr\bin\bash.exe -lc 'cd /c/projects/gdl/win32libs && . /c/projects/gdl/scripts/patch/patch_plplot.sh'
         #
-        cmake "plplot-5.13.0" "-Bplplot-5.13.0/build" -G "MinGW Makefiles" -DCMAKE_BUILD_TYPE=$env:CONFIGURATION `
-          -DCMAKE_CXX_FLAGS_RELEASE='-O3' `
-          -DPL_HAVE_QHULL=OFF -DHAVE_SHAPELIB=OFF `
-          -DDEFAULT_NO_CAIRO_DEVICES=ON -DDEFAULT_NO_QT_DEVICES=ON -DDEFAULT_NO_BINDINGS=ON `
-          -DENABLE_cxx=ON -DOLD_WXWIDGETS=ON  -DENABLE_wxwidgets:BOOL=ON `
-          -DWITH_FREETYPE=OFF -DPLD_wxwidgets=ON -DPLD_pdf=OFF -DPLD_psttf=OFF -DPLD_wingdi=ON `
-          -DCMAKE_INSTALL_PREFIX=C:\projects\gdl\mingw\plplot-5.13 -DOLD_WXWIDGETS=ON `
-          -DENABLE_wxwidgets=ON -DwxWidgets_LIB_DIR=$env:WX_TOP\lib\gcc_dll 
-        cd plplot-5.13.0/build
-        mingw32-make -j4
-        mingw32-make install
-        
-        # Eigen
+        $env:wxWidgets_ROOT_DIR=$env:WX_TOP
+        }
+  - cd c:\projects\gdl\win32libs
+  #- cmd /K ..\scripts\appveyor_plplot.bat This leaves wxWidgets driver behind !!
+  - ps: |
+      if ($true)
+      {
+        cd c:/projects/gdl
+        c:/msys64/usr/bin/bash.exe -lc 'cd $OLDPWD &&. ./scripts/appveyor_plplot.msys'
+
+       # Eigen
         cd c:\projects\gdl\win32libs
         appveyor DownloadFile `
           https://bitbucket.org/eigen/eigen/get/3.3.4.tar.bz2 -FileName eigen-eigen-5a0156e40feb.tar.bz2
         tar jxf eigen-eigen-5a0156e40feb.tar.bz2
         md eigen-eigen-5a0156e40feb/build
-        cmake "eigen-eigen-5a0156e40feb" "-Beigen-eigen-5a0156e40feb/build" -G "MinGW Makefiles" "-DCMAKE_BUILD_TYPE=$($env:CONFIGURATION)" -DCMAKE_INSTALL_PREFIX=c:\projects\gdl\win32libs
+        cmake "eigen-eigen-5a0156e40feb" "-Beigen-eigen-5a0156e40feb/build" -G "MinGW Makefiles" "-DCMAKE_BUILD_TYPE=$($env:CONFIGURATION)" -DCMAKE_INSTALL_PREFIX=c:\projects\gdl\win32libs > $env:BLDDIR/eigen3.out
         cd eigen-eigen-5a0156e40feb/build
-        mingw32-make install
+        echo " eigen3 (eigen-eigen-5a0156e40feb) to be made " 
+        echo " eigen3 (eigen-eigen-5a0156e40feb) to be made "  >> $env:BLDDIR/eigen3.out
+        mingw32-make install >> $env:BLDDIR/eigen3.out
         
         # GSL
-        cd c:\projects\gdl\win32libs
-        appveyor DownloadFile http://ftpmirror.gnu.org/gsl/gsl-2.4.tar.gz
-        tar zxf gsl-2.4.tar.gz
-        echo 'export PATH=$PATH:/c/mingw-w64/$env:GCC/$env:mname/bin && export LDFLAGS=-L/c/mingw-w64/$env:GCC/$env:mname/i686-w64-mingw32/lib && export CPPFLAGS=-I/c/mingw-w64/$env:GCC/$env:mname/i686-w64-mingw32/include && cd /c/projects/gdl/win32libs/gsl-2.4 && ./configure --build=i686-w64-mingw32 --host=i686-w64-mingw32 --prefix /c/projects/gdl/win32libs && make -j4 && make install'
-        #c:\msys64\usr\bin\bash.exe -lc 'export PATH=$PATH:/c/mingw-w64/$env:GCC/$env:mname/bin && export LDFLAGS=-L/c/mingw-w64/$env:GCC/$env:mname/i686-w64-mingw32/lib && export CPPFLAGS=-I/c/mingw-w64/$env:GCC/$env:mname/i686-w64-mingw32/include && cd /c/projects/gdl/win32libs/gsl-2.4 && ./configure --build=i686-w64-mingw32 --host=i686-w64-mingw32 --prefix /c/projects/gdl/win32libs && make -j4 && make install'
-        c:\msys64\usr\bin\bash.exe -lc 'cd /c/projects/gdl/win32libs/gsl-2.4 && . /c/projects/gdl/scripts/appveyor_gsl.msys'
+        c:\msys64\usr\bin\bash.exe -lc 'cd /c/projects/gdl/win32libs && . /c/projects/gdl/scripts/appveyor_gsl.msys'
  
         # GNUWin32 (GNU Readline, Zlib, libPNG, PCRE, libtiff)
         # TODO: Find appropriate libtiff with TIFFField, TIFFFieldWithTag and TIFFFieldName (and libgeotiff?)
@@ -322,7 +322,7 @@ after_build:
   - cd c:\projects\gdl
   - ps: copy INSTALL.plplot c:/projects/gdl/install
   - ps: copy scripts/rungdl.bat c:/projects/gdl/install/rungdl.bat
-  - 7z a gdl_build.zip install build %WX_TOP%
+  - 7z a gdl_build.zip install build mingw
 
 artifacts:
   - path: gdl_build.zip
