--- a/appveyor.yml
+++ b/appveyor.yml
@@ -54,13 +54,17 @@ install:
         md c:\projects\gdl\win32libs\lib ;  md c:\projects\gdl\win32libs\include
         md c:\projects\gdl\build ;  $env:BLDDIR="c:\projects\gdl\build"
         # WxWidgets
+        $env:WXNAME="wxWidgets-3.0.4"
+        $env:WX_TOP="c:\projects\gdl\win32libs\wxWidgets-3.0.4"
         cd c:\projects\gdl\win32libs
+       }
+  - ps: |
+      if ($false)
+      {
         appveyor DownloadFile `
           https://github.com/wxWidgets/wxWidgets/releases/download/v3.0.4/wxWidgets-3.0.4.7z
         7z x wxWidgets-3.0.4.7z -y -o"wxWidgets-3.0.4"
         cd c:\projects\gdl\win32libs\wxWidgets-3.0.4\build\msw
-        $env:WXNAME="wxWidgets-3.0.4"
-        $env:WX_TOP="c:\projects\gdl\win32libs\wxWidgets-3.0.4"
         mingw32-make SHELL=cmd -f makefile.gcc setup_h BUILD=release SHARED=1 USE_GUI=1 USE_XRC=0 USE_HTML=0 USE_WEBVIEW=0 USE_MEDIA=0 USE_AUI=0 USE_RIBBON=0 USE_PROPGRID=0 USE_RICHTEXT=0 USE_STC=0 USE_OPENGL=0 VENDOR=gdl DEBUG_FLAG=1 > $env:BLDDIR/makewx.out
         echo "$env:WX_TOP mingw32-make (1) finished" >>  $env:BLDDIR/makewx.out
         echo "$env:WX_TOP mingw32-make (1) finished" 
@@ -70,7 +74,12 @@ install:
         # Below 2 lines are required for wxWidgets-3.0.4, don't know why
         copy c:\projects\gdl\win32libs\wxWidgets-3.0.4\build\msw\gcc_mswudll\coredll_headerctrlg.o c:\projects\gdl\win32libs\wxWidgets-3.0.4\build\msw\gcc_mswudll\coredll_headerctrlgo
         mingw32-make SHELL=cmd -f makefile.gcc -j4 BUILD=release SHARED=1 USE_GUI=1 USE_XRC=0 USE_HTML=0 USE_WEBVIEW=0 USE_MEDIA=0 USE_AUI=0 USE_RIBBON=0 USE_PROPGRID=0 USE_RICHTEXT=0 USE_STC=0 USE_OPENGL=0 VENDOR=gdl DEBUG_FLAG=1
-
+      }
+      # The above builds ok but does not link with plplot build.
+      
+  - ps: |
+      if ($true)
+      {
         # BSD-XDR
         cd c:\projects\gdl\win32libs
         appveyor DownloadFile `
@@ -133,7 +142,10 @@ install:
         
         # GSL
         c:\msys64\usr\bin\bash.exe -lc 'cd /c/projects/gdl/win32libs && . /c/projects/gdl/scripts/appveyor_gsl.msys'
- 
+        }
+  - ps: |
+      if ($true)
+      { 
         # GNUWin32 (GNU Readline, Zlib, libPNG, PCRE, libtiff)
         # TODO: Find appropriate libtiff with TIFFField, TIFFFieldWithTag and TIFFFieldName (and libgeotiff?)
         #       (Remember to remove -DTIFF=OFF -DGEOTIFF=OFF from build_script when done)
