--- a/appveyor.yml
+++ b/appveyor.yml
@@ -59,7 +59,7 @@ install:
         cd c:\projects\gdl\win32libs
        }
   - ps: |
-      if ($false)
+      if ($true)
       {
         appveyor DownloadFile `
           https://github.com/wxWidgets/wxWidgets/releases/download/v3.0.4/wxWidgets-3.0.4.7z
@@ -74,9 +74,12 @@ install:
         # Below 2 lines are required for wxWidgets-3.0.4, don't know why
         copy c:\projects\gdl\win32libs\wxWidgets-3.0.4\build\msw\gcc_mswudll\coredll_headerctrlg.o c:\projects\gdl\win32libs\wxWidgets-3.0.4\build\msw\gcc_mswudll\coredll_headerctrlgo
         mingw32-make SHELL=cmd -f makefile.gcc -j4 BUILD=release SHARED=1 USE_GUI=1 USE_XRC=0 USE_HTML=0 USE_WEBVIEW=0 USE_MEDIA=0 USE_AUI=0 USE_RIBBON=0 USE_PROPGRID=0 USE_RICHTEXT=0 USE_STC=0 USE_OPENGL=0 VENDOR=gdl DEBUG_FLAG=1
-      }
+        # for mingw usage we need to define wxWidgets_ROOT_DIR
+        #
+        $env:wxWidgets_ROOT_DIR=$env:WX_TOP
+        }
       # The above builds ok but does not link with plplot build.
-      
+      # WX_TOP can be used for wx in a mingw build of GDL.
   - ps: |
       if ($true)
       {
@@ -96,7 +99,7 @@ install:
         mv mingw\mgwxdr-0.dll c:\projects\gdl\win32libs\bin
         }
   - ps: |
-      if ($true)
+      if ($false)
       {
         # PLplot
         cd c:\projects\gdl\win32libs
@@ -117,29 +120,32 @@ install:
         # Findwx.cmake.patch:
         #
         c:\msys64\usr\bin\bash.exe -lc 'cd /c/projects/gdl/win32libs && . /c/projects/gdl/scripts/patch/patch_plplot.sh'
-        #
-        $env:wxWidgets_ROOT_DIR=$env:WX_TOP
         }
-  - cd c:\projects\gdl\win32libs
-  #- cmd /K ..\scripts\appveyor_plplot.bat This leaves wxWidgets driver behind !!
-  - ps: |
-      if ($true)
+      else 
       {
         cd c:/projects/gdl
         c:/msys64/usr/bin/bash.exe -lc 'cd $OLDPWD &&. ./scripts/appveyor_plplot.msys'
-
+      }
+        #- cmd /K ..\scripts\appveyor_plplot.bat This leaves wxWidgets driver behind !!
+  - ps: |
+      if ($true)
+      {
        # Eigen
         cd c:\projects\gdl\win32libs
         appveyor DownloadFile `
           https://bitbucket.org/eigen/eigen/get/3.3.4.tar.bz2 -FileName eigen-eigen-5a0156e40feb.tar.bz2
         tar jxf eigen-eigen-5a0156e40feb.tar.bz2
         md eigen-eigen-5a0156e40feb/build
-        cmake "eigen-eigen-5a0156e40feb" "-Beigen-eigen-5a0156e40feb/build" -G "MinGW Makefiles" "-DCMAKE_BUILD_TYPE=$($env:CONFIGURATION)" -DCMAKE_INSTALL_PREFIX=c:\projects\gdl\win32libs > $env:BLDDIR/eigen3.out
+        # cmake is generating PS error, plain make seems to do alright.
+        #cmake "eigen-eigen-5a0156e40feb" "-Beigen-eigen-5a0156e40feb/build" -G "MinGW Makefiles" "-DCMAKE_BUILD_TYPE=$($env:CONFIGURATION)" -DCMAKE_INSTALL_PREFIX=c:\projects\gdl\win32libs > $env:BLDDIR/eigen3.out
         cd eigen-eigen-5a0156e40feb/build
         echo " eigen3 (eigen-eigen-5a0156e40feb) to be made " 
-        echo " eigen3 (eigen-eigen-5a0156e40feb) to be made "  >> $env:BLDDIR/eigen3.out
+        #echo " eigen3 (eigen-eigen-5a0156e40feb) to be made "  >> $env:BLDDIR/eigen3.out
         mingw32-make install >> $env:BLDDIR/eigen3.out
-        
+        }
+  - ps: |
+      if ($true)
+      {
         # GSL
         c:\msys64\usr\bin\bash.exe -lc 'cd /c/projects/gdl/win32libs && . /c/projects/gdl/scripts/appveyor_gsl.msys'
         }
@@ -294,32 +300,22 @@ before_build:
   - ps: Set-Content -Path "Makefile.am" -Value (get-content -Path "Makefile.am" | Select-String -Pattern 'test_tiff.pro' -NotMatch)
   
 build_script:
-  - cd c:\projects
-  - set CMAKE_LIBRARY_PATH=c:\projects\gdl\win32libs\lib
-  - set CMAKE_INCLUDE_PATH=c:\projects\gdl\win32libs\include
-  - cmake gdl -Bc:\projects\gdl\build -G "MinGW Makefiles" ^
-    -DCMAKE_BUILD_TYPE=%CONFIGURATION% -DCMAKE_CXX_FLAGS_RELEASE="-O3 -DNDEBUG" ^
-    -DCMAKE_CXX_FLAGS="-Werror" -DWXWIDGETSDIR=%WX_TOP% ^
-      -DPLPLOTDIR=%PLPLOTDIR% ^
-      -DCMAKE_SYSTEM_PREFIX_PATH=c:\projects\gdl\mingw\%mname% ^
-    -DCMAKE_INSTALL_PREFIX:PATH=c:\projects\gdl\install\gdl -DGRAPHICSMAGICK=OFF ^
-    -DMAGICK=OFF -DPSLIB=OFF -DNETCDF=OFF -DHDF=OFF -DHDF5=OFF -DFFTW=OFF -DGSHHS=OFF ^
-    -DPYTHON=OFF -DTIFF=OFF -DGEOTIFF=OFF
-  - cd c:\projects\gdl\build
-  - mingw32-make -j4
-  - mingw32-make install
+  - cd c:\projects\gdl
+  - copy win32libs\plplot-5.13.0\cmake\modules\FindwxWidgets.cmake .\CMakeModules\
+  - cmd /K scripts/appveyor_gdl.bat
 
   # tests
-  # TODO: copy those to the artefact dir
-  #- set PATH=%PATH%;C:\projects\gdl\win32libs\lib
-  - set PATH=%PATH%;C:\projects\gdl\win32libs\bin
   - set PATH=%PATH%;%WX_TOP%\lib\gcc_dll
-  #- set PATH=%PATH%;C:\mingw-w64\%GCC%\%MNAME%\%ARCH%-w64-mingw32\lib
-  - ps: copy $env:PLPLOTDIR\bin\lib*.dll c:\projects\gdl\install\gdl\bin
-  - ps: copy C:\mingw-w64\$env:GCC\$env:mname\bin\*.dll c:\projects\gdl\install\gdl\bin
-  - ps: copy $env:PLPLOTDIR/lib/plplot5.13.0/drivers/*.dll c:/projects/gdl/install/gdl/bin -ErrorAction silentlycontinue
-  - ps: copy -r $env:PLPLOTDIR/lib/plplot5.13.0 c:/projects/gdl/install/plplot5.13
-  - ps: copy -r $env:PLPLOTDIR/share/plplot5.13.0 c:/projects/gdl/install/plplot5.13/lib
+  - set PATH=%PATH%;C:\mingw-w64\%GCC%\%MNAME%\%ARCH%-w64-mingw32\lib
+  - ps: |
+      if ($true)
+      {
+        copy $env:PLPLOTDIR\bin\lib*.dll c:\projects\gdl\install\gdl\bin
+        copy C:\mingw-w64\$env:GCC\$env:mname\bin\*.dll c:\projects\gdl\install\gdl\bin
+        copy $env:PLPLOTDIR/lib/plplot5.13.0/drivers/*.dll c:/projects/gdl/install/gdl/bin -ErrorAction silentlycontinue
+        copy -r $env:PLPLOTDIR/lib/plplot5.13.0 c:/projects/gdl/install/plplot5.13
+        copy -r $env:PLPLOTDIR/share/plplot5.13.0 c:/projects/gdl/install/plplot5.13/lib
+        }
   - set PATH=%PATH%;C:\projects\gdl\install\gdl\bin
   - set PLPLOT_DRV_DIR=%PLPLOTDIR%/lib/plplot5.13.0/drivers
   - set PLPLOT_LIB=%PLPLOTDIR%/share/plplot5.13.0
