This works fine at home

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -126,7 +126,7 @@ install:
         cd c:\projects\gdl\win32libs
         appveyor DownloadFile `
           http://downloads.sourceforge.net/project/plplot/plplot/5.13.0%20Source/plplot-5.13.0.tar.gz
-        c:/msys64/usr/bin/bash.exe -lc 'cd /c/projects/gdl &&. ./scripts/appveyor_plplot.msys' -ErrorAction silentlycontinue
+        c:/msys64/usr/bin/bash.exe -lc 'cd /c/projects/gdl &&. ./scripts/appveyor_plplot.msys'
       }
         #- cmd /K ..\scripts\appveyor_plplot.bat This leaves wxWidgets driver behind !!
   - ps: |
